--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -1096,7 +1096,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 102,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -1121,14 +1121,12 @@
                 }
             ],
             "source": [
-                "sns.histplot(data = df_filtrado, x = \"skin_thickness\", bins = 50).set(xlabel = None)\n",
-                "\n",
-                "#sns.boxplot(data = df_filtrado, x = \"skin_thickness\")"
+                "sns.histplot(data = df_filtrado, x = \"skin_thickness\", bins = 50).set(xlabel = None)"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 103,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -1226,6 +1224,8 @@
                 }
             ],
             "source": [
+                "# Imputamos los datos de la columna insulin\n",
+                "\n",
                 "mu_ins = df_sin_ceros[\"insulin\"].mean()\n",
                 "sigma_ins = df_sin_ceros[\"insulin\"].std()\n",
                 "num_zeros_ins = (df_filtrado[\"insulin\"] == 0).sum()\n",
